objects/fferpcore__ScheduledJobRun__c.object
<CustomObject>
    <customHelpPage>fferpcore__ScheduledJobRunHelp</customHelpPage>
    <fields>
        <fullName>fferpcore__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fferpcore__BatchProcessStatus__c</fullName>
        <formula>TEXT( fferpcore__BatchProcess__r.fferpcore__Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Process Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>fferpcore__fflib_BatchProcess__c</referenceTo>
        <relationshipName>Workers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__NotificationType__c</fullName>
        <description>Indicates whether the batch control was successful. The indication is Successful, Failed or Mixed depending on the total number of errors, aborted batches and number of batches that exceeded limits.</description>
        <formula>IF (
                fferpcore__TotalNumberOfLogs__c = 0,
                &apos;Undefined&apos;,
                IF (
                    AND (
                        fferpcore__TotalNumberOfErrors__c = 0,
                        fferpcore__TotalNumberOfAborts__c = 0,
                        fferpcore__TotalNumberOfExternal__c = 0
                    ),
                    &apos;Successful&apos;,
                    IF (
                        fferpcore__TotalNumberOfErrors__c = fferpcore__TotalNumberOfLogs__c,
                        &apos;Failure&apos;,
                        IF (
                            fferpcore__TotalNumberOfAborts__c &gt; 0,
                            &apos;Failure&apos;,
                            IF (
                                fferpcore__TotalNumberOfExternal__c &gt; 0,
                                &apos;Failure&apos;,
                                &apos;Mixed&apos;
                            )
                        )
                    )
                )
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the batch control was successful.</inlineHelpText>
        <label>Notification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Process__c</fullName>
        <label>Scheduled Job</label>
        <referenceTo>fferpcore__ScheduledJob__c</referenceTo>
        <relationshipLabel>Runs</relationshipLabel>
        <relationshipName>Runs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fferpcore__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__TotalNumberOfAborts__c</fullName>
        <description>Total number of aborted batches based on the number of batch logs that contain a log type of Abort.</description>
        <inlineHelpText>Total number of aborted batches based on the number of batch logs that contain a log type of Abort.</inlineHelpText>
        <label>Total Aborted Batches</label>
        <summaryFilterItems>
            <field>fferpcore__ScheduledJobLog__c.fferpcore__LogType__c</field>
            <operation>equals</operation>
            <value>Abort</value>
        </summaryFilterItems>
        <summaryForeignKey>fferpcore__ScheduledJobLog__c.fferpcore__BatchRun__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fferpcore__TotalNumberOfErrors__c</fullName>
        <description>Total number of records with an error based on the number of batch logs that contain a log type of Error.</description>
        <inlineHelpText>Total number of records with an error based on the number of batch logs that contain a log type of Error.</inlineHelpText>
        <label>Total Errors</label>
        <summaryFilterItems>
            <field>fferpcore__ScheduledJobLog__c.fferpcore__LogType__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryForeignKey>fferpcore__ScheduledJobLog__c.fferpcore__BatchRun__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fferpcore__TotalNumberOfExternal__c</fullName>
        <description>Total number of batches that exceed Salesforce governor limits or contain other issues based on the number of batch logs that contain a log type of External.</description>
        <inlineHelpText>Total number of batches that exceeded Salesforce governor limits or contain other issues.</inlineHelpText>
        <label>Total Number of Batches Exceeding Limits</label>
        <summaryFilterItems>
            <field>fferpcore__ScheduledJobLog__c.fferpcore__LogType__c</field>
            <operation>equals</operation>
            <value>External</value>
        </summaryFilterItems>
        <summaryForeignKey>fferpcore__ScheduledJobLog__c.fferpcore__BatchRun__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fferpcore__TotalNumberOfLogs__c</fullName>
        <description>Total number of batch logs for this batch control.</description>
        <inlineHelpText>Total number of batch logs for this batch control.</inlineHelpText>
        <label>Total Logs</label>
        <summaryForeignKey>fferpcore__ScheduledJobLog__c.fferpcore__BatchRun__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Scheduled Job Run</label>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{00000000}</displayFormat>
        <label>Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Job Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>